--- a/challenges/challenge1JS.html
+++ b/challenges/challenge1JS.html
@@ -55,7 +55,7 @@
                     const participationData = [
                         { name: "John Doe", attendance: "Present", score: 85 },
                         { name: "Jane Smith", attendance: "Absent", score: 70 },
-                        { name: "David Johnson", attendance: "Present", scores: 90 }
+                        { name: "David Johnson", attendance: "Present", score: 90 }
                     ];
 
                     // Populate the table with sample data
